--- a/back/pom.xml
+++ b/back/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>spring-boot-starter-aop</artifactId>
             <version>2.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
          <dependency>
              <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-devtools</artifactId>
